objects/External_Vendor_File_Feed_Non_Enrollment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Service_Provider_Relationship__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Supporting_File_Feeds__c</fullName>
        <label>Area Supporting File Feed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DIT</fullName>
                </value>
                <value>
                    <fullName>HMC</fullName>
                </value>
                <value>
                    <fullName>UM</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Cancellation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Exchange_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Exchange Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>File_Frequency__c</fullName>
        <label>File Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Biweekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>File_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_Other_List_Area_Supporting__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other, List Area Supporting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Case</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>External_Vendor_File_Feeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Packages_Suffixes_Impacted_By_File__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Packages/Suffixes Impacted By File</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Runout_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Runout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Provider Relationship Name</label>
        <referenceTo>ServiceProviderRelationship__c</referenceTo>
        <relationshipLabel>External Vendor File Feed Non Enrollment</relationshipLabel>
        <relationshipName>External_Vendor_File_Feeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>External Vendor File Feed Non Enrollment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EXFILE-{0000}</displayFormat>
        <label>External File Feed Non Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Vendor File Feed Non Enrollment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EVFF_VR01_IfOtherListAreaSupporting</fullName>
        <active>true</active>
        <description>&quot;If Other List Area Supporting&quot; field is required when user selects the picklist value &quot;Other&quot; on &quot;Area Supporting File Feed&quot; field</description>
        <errorConditionFormula>AND(!$User.BypassValidation__c,
IF(AND(
(ISPICKVAL( Area_Supporting_File_Feeds__c ,&quot;Other&quot;)), ISBLANK(If_Other_List_Area_Supporting__c )),TRUE, FALSE))</errorConditionFormula>
        <errorDisplayField>If_Other_List_Area_Supporting__c</errorDisplayField>
        <errorMessage>Please enter a value here</errorMessage>
    </validationRules>
</CustomObject>